--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,4 +1,4 @@
-name: ci
+name: ci-job
 
 on:
   pull_request:
@@ -19,4 +19,4 @@ jobs:
           go-version: "1.25.1"
 
       - name: Force Failure
-        run: (exit 1)
+        run: go version
