--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -9,7 +9,13 @@ jobs:
     name: Deploy
     runs-on: ubuntu-latest
 
+    env:
+      DATABASE_URL: ${{ secrets.DATABASE_URL }}
+
     steps:
+      - name: Migrate up
+        run: scripts/migrateup.sh
+
       - name: Check out code
         uses: actions/checkout@v4
 
@@ -37,3 +43,4 @@ jobs:
 
       - name: Deploy to Cloud Run
         run: gcloud run deploy notely --image us-central1-docker.pkg.dev/leafy-galaxy-473109-v1/notely-ar-repo/notely:latest --region us-central1 --allow-unauthenticated --project leafy-galaxy-473109-v1 --max-instances=4
+
