--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -14,7 +14,7 @@ jobs:
 
     steps:
       - name: Migrate up
-        run: scripts/migrateup.sh
+        run: ./scripts/migrateup.sh
 
       - name: Check out code
         uses: actions/checkout@v4
@@ -25,7 +25,7 @@ jobs:
           go-version: "1.25.1"
 
       - name: Build the app
-        run: scripts/buildprod.sh
+        run: ./scripts/buildprod.sh
 
       - id: 'auth'
         uses: 'google-github-actions/auth@v2'
