--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -13,8 +13,6 @@ jobs:
       DATABASE_URL: ${{ secrets.DATABASE_URL }}
 
     steps:
-      - name: Migrate up
-        run: ./scripts/migrateup.sh
 
       - name: Check out code
         uses: actions/checkout@v4
@@ -23,6 +21,12 @@ jobs:
         uses: actions/setup-go@v5
         with:
           go-version: "1.25.1"
+
+      - name: Install Goose
+        run: go install github.com/pressly/goose/v3/cmd/goose@latest
+
+      - name: Migrate up
+        run: ./scripts/migrateup.sh
 
       - name: Build the app
         run: ./scripts/buildprod.sh
